third_party/move/move-compiler-v2/tests/ability-check/inferred_copy.exp

Diagnostics:
error: cannot move local `r` since it is still in use
   ┌─ tests/ability-check/inferred_copy.move:33:17
   │
33 │         let y = move r;
   │                 ^^^^^^ attempted to move here
34 │         some(r);
   │         ------- used here
